RESOLVED FIXED 272923
REGRESSION (277677@main): [ MacOS ] accessibility/focusable-inside-hidden.html is a consistent timeout
https://bugs.webkit.org/show_bug.cgi?id=272923
Summary REGRESSION (277677@main): [ MacOS ] accessibility/focusable-inside-hidden.htm...
Jay Stfleur
Reported 2024-04-18 13:42:00 PDT
Description: accessibility/focusable-inside-hidden.html Is a consistent timeout on Monterey+ WK1 and WK2 Buildbot Url: https://build.webkit.org/#/builders/926/builds/2496 History: https://results.webkit.org/?suite=layout-tests&test=accessibility%2Ffocusable-inside-hidden.html&platform=mac&flavor=wk1&flavor=wk2 Diff/Image Diff/Crash Log: --- /Volumes/Data/worker/Apple-Sonoma-Release-WK2-Tests/build/layout-test-results/accessibility/focusable-inside-hidden-expected.txt +++ /Volumes/Data/worker/Apple-Sonoma-Release-WK2-Tests/build/layout-test-results/accessibility/focusable-inside-hidden-actual.txt @@ -1,13 +1,6 @@ -This tests that a focusable object inside an aria-hidden is in the hieararchy only after it gains focus. +CONSOLE MESSAGE: Unhandled Promise Rejection: TypeError: null is not an object (evaluating 'button.description') +FAIL: Timed out waiting for notifyDone to be called -PASS: !button || !button.isValid === true -PASS: button.description === 'AXDescription: BUTTON' -PASS: button.description === 'AXDescription: BUTTON' -PASS: !button || !button.isValid === true - -PASS successfullyParsed is true - -TEST COMPLETE a test
Attachments
Patch (2.56 KB, patch)
2024-04-18 14:54 PDT, Tyler Wilcock
no flags
Patch (2.63 KB, patch)
2024-04-18 20:28 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2024-04-18 13:42:23 PDT
EWS
Comment 2 2024-04-18 13:59:40 PDT
Test gardening commit 277697@main (d137c5a7b8bf): <https://commits.webkit.org/277697@main> Reviewed commits have been landed. Closing PR #27470 and removing active labels.
Tyler Wilcock
Comment 3 2024-04-18 14:54:22 PDT
Tyler Wilcock
Comment 4 2024-04-18 20:28:41 PDT
EWS
Comment 5 2024-04-19 07:47:28 PDT
Committed 277736@main (390e4669a0ad): <https://commits.webkit.org/277736@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470999 [details].
Note You need to log in before you can comment on or make changes to this bug.