REGRESSION (277677@main): [ MacOS ] accessibility/focusable-inside-hidden.html is a consistent timeout https://bugs.webkit.org/show_bug.cgi?id=272923 rdar://problem/126709970

Reviewed by Chris Fleizach.

https://github.com/WebKit/WebKit/commit/873f5404e7800fbfae3b984289a531cf74e30cc9
erroneously removed an isFocused() check used to override aria-hidden="true",
breaking accessibility/focusable-inside-hidden.html. This patch re-adds this check.

* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::setIsIgnoredFromParentDataForChild):

Canonical link: https://commits.webkit.org/277736@main